--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.profiles.active=prod
 server.error.whitelabel.enabled=false
 server.error.include-message=always
 server.error.include-stacktrace=on_param
+
+spring.datasource.url=jdbc://myfirstserver.mysql.database.azure.com/countries.DB
+spring.datasource.username=pirum
+spring.datasource.password=Nikodani2
